--- a/0151122675.markdown
+++ b/0151122675.markdown
@@ -1,4 +1,4 @@
- # IMUDGES 2016暑期开发 日报书
+﻿ # IMUDGES 2016暑期开发 日报书
 
  ### 基本信息
  > * 姓名：杨洋  、
@@ -18,16 +18,12 @@
  
  ------
  ### 今日未完成事宜
-  [ ] 学习Ablerton Live
- 
- | 事宜               | 预期结果                  | 当前结果        | 未完成原因         | 
- | 学习Ablerton Live  | 能够弹奏luv letter        | 还不能够...     | 学习成都不够       |
- 
- 
+ - [ ] 学习Ablerton Live
+
  
  ------
  ### 明日待办事宜
-  [ ] 学习php
-  [ ] 学习Ablerton Live 
-  [ ] 复习html等
+ - [ ] 学习php
+ - [ ] 学习Ablerton Live 
+ - [ ] 复习html等
  ------
